CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(alertbot)

SET(PROJECT_DESCRIPTION "Alerting Bot")
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "${PREFIX}/bin")
SET(INCLUDEDIR "${PREFIX}/include/${PROJECT_NAME}")
SET(LIBDIR "${PREFIX}/lib")
SET(VERSION 0.4.5)

SET(CMAKE_MACOSX_RPATH 1)

SET(SRCS
    src/main.c
)

ADD_DEFINITIONS("-DDEBUG=1")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
SET(DEPENDENTS "libcurl json-c telebot")
INCLUDE(FindPkgConfig)
pkg_check_modules(PKGS REQUIRED ${DEPENDENTS})

SET(EXTRA_LIB_CLFAGS "${EXTRA_LIB_CFLAGS}")

FOREACH(flag ${PKGS_CFLAGS})
    SET(EXTRA_LIB_CFLAGS "${EXTRA_LIB_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_LIB_CFLAGS} -Werror -Wall -Wno-unused-function" )

ADD_EXECUTABLE(alertbot ${SRCS})
TARGET_LINK_LIBRARIES(alertbot ${PKGS_LDFLAGS} telebot pthread)
